Bug 1649393 - Remove old IDB files directories during 1.0 to 2.0 storage upgrade; r=ttung, a=RyanVM

If an old IDB files directory exists, it no longer causes a failure during the
storage upgrade. The directory is removed instead.

Differential Revision: https://phabricator.services.mozilla.com/D81870